Fix background on IE.

--- a/app/css/hero.styl
+++ b/app/css/hero.styl
@@ -55,6 +55,7 @@
         display: none
 
     .quote-box
+      background: rgba(darken(#0e517e, 30%), 0.9)
       background: linear-gradient(top, rgba(darken(#0e517e, 30%), 0.9) 0%, rgba(darken(#222d4f, 30%), 0.9) 100%);
       height: 12em
       border-bottom: 0.5em solid rgba(mm-red, 0.8)
